--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,22 @@ img {
 }
 
 .link-nav.active {
+  display: block;
   color: var(--accent-txt-cl);
+  padding-bottom: 0;
+}
+
+.link-nav.active::after {
+  content: '';
+  display: block;
+
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+
+  background: var(--accent-bg-cl);
+
+  margin-top: 28px;
 }
 
 .header-group .link:hover,
@@ -292,6 +307,27 @@ img {
 .work-list {
   display: flex;
   gap: 30px;
+}
+
+.list-item-work {
+  position: relative;
+}
+
+.subtitle-work {
+  width: 100%;
+  font-weight: 700;
+  line-height: calc(16 / 14);
+  text-align: center;
+  text-transform: uppercase;
+
+  color: var(--white-txt-cl);
+  background-color: rgba(47, 48, 58, 0.8);
+
+  position: absolute;
+  bottom: 0;
+
+  padding-top: 27px;
+  padding-bottom: 27px;
 }
 
 /* Наша команда */
@@ -596,4 +632,57 @@ img {
   line-height: calc(30 / 16);
 
   color: var(--secondary-txt-cl);
+}
+
+/* Modal window */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+
+  background-color: var(--white-bg-cl);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: var(--white-bg-cl);
+
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  cursor: pointer;
+
+  padding: 0;
 }
