--- a/css/styles.css
+++ b/css/styles.css
@@ -754,6 +754,11 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  padding-top: 40px;
+  padding-right: 34px;
+  padding-bottom: 40px;
+  padding-left: 46px;
 }
 
 .modal-btn {
@@ -773,4 +778,8 @@ img {
   cursor: pointer;
 
   padding: 0;
+}
+
+label {
+  display: block;
 }
